go get deprecation

--- a/proto/Makefile
+++ b/proto/Makefile
@@ -15,6 +15,5 @@ gen-grpc:
 clean:
 	rm -rf gen/v1/l3afdconfig/l3afdconfig_service*
 deps:
-	go get -u google.golang.org/protobuf/cmd/protoc-gen-go
-	go get -u google.golang.org/grpc/cmd/protoc-gen-go-grpc
-	go get -u github.com/grpc-ecosystem/grpc-gateway/protoc-gen-swagger
+	go install google.golang.org/protobuf/cmd/protoc-gen-go
+	go install google.golang.org/grpc/cmd/protoc-gen-go-grpc 
