--- a/config/l3afd.cfg
+++ b/config/l3afd.cfg
@@ -52,5 +52,7 @@ addr: 0.0.0.0:8899
 enabled: true
 
 [l3af-configs]
-rpc-addr: localhost:58898
 restapi-addr: localhost:53000
+
+[l3af-config-store]
+filename: "/etc/tb/l3afd/l3af-config.json"
