--- a/.github/workflows/ci-build-windows.yaml
+++ b/.github/workflows/ci-build-windows.yaml
@@ -21,10 +21,23 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
       
-      - name: Build
+      - name: Format
         run: |
-          go build -tags WINDOWS .
+          go version
+          $res = (gofmt -l .)
+          if ($res -ne "") {
+            echo $res
+            exit 1
+          }
+
+      - name: Vet
+        run: |
+          go vet ./...
       
       - name: Test
         run: |
           go test -tags WINDOWS ./...
+
+      - name: Build
+        run: |
+          go build -tags WINDOWS .
