Update go-chi version to v5
Signed-off-by: Santhosh Fernandes <santhosh.fernandes@gmail.com>

--- a/config/l3afd.cfg
+++ b/config/l3afd.cfg
@@ -55,4 +55,4 @@ enabled: true
 restapi-addr: localhost:53000
 
 [l3af-config-store]
-filename: "/etc/tb/l3afd/l3af-config.json"
+filename: "/etc/l3afd/l3af-config.json"
