--- a/.github/workflows/ci-build-windows.yaml
+++ b/.github/workflows/ci-build-windows.yaml
@@ -41,6 +41,12 @@ jobs:
         run: |
           go test -tags WINDOWS ./...
 
+      - uses: dominikh/staticcheck-action@v1.1.0
+        with:
+          version: "2021.1.2"
+          install-go: false
+          build-tags: WINDOWS
+
       - name: Build
         run: |
           go build -tags WINDOWS .
