--- a/config/l3afd.cfg
+++ b/config/l3afd.cfg
@@ -14,6 +14,8 @@ max-nfs-attach-count: 10
 bpf-chaining-enabled: true
 bpf-delay-time: 5
 swagger-api-enabled: false
+# PROD | DEV
+environment: PROD
 
 [kf-repo]
 url:
