Implemented map name without having full path in mapname
Signed-off-by: a0p0ie5 <a0p0ie5@homeoffice.wal-mart.com>

--- a/config/l3afd.cfg
+++ b/config/l3afd.cfg
@@ -16,6 +16,8 @@ bpf-delay-time: 5
 swagger-api-enabled: false
 # PROD | DEV
 environment: PROD
+bpfmap-default-dir: /sys/fs/bpf
+tcmaps-relative-dir: /tc/globals
 
 [kf-repo]
 url:
@@ -44,8 +46,8 @@ is-user-program: false
 [tc-root-program]
 name: tc_root
 artifact: l3af_tc_root.tar.gz
-ingress-map-name: /sys/fs/bpf/tc/globals/tc_ingress_root_array
-egress-map-name: /sys/fs/bpf/tc/globals/tc_egress_root_array
+ingress-map-name: tc_ingress_root_array
+egress-map-name: tc_egress_root_array
 command: tc_root
 version: 1.0
 is-user-program: false
