updated the varibles name
Signed-off-by: a0p0ie5 <a0p0ie5@homeoffice.wal-mart.com>

--- a/config/l3afd.cfg
+++ b/config/l3afd.cfg
@@ -16,8 +16,10 @@ bpf-delay-time: 5
 swagger-api-enabled: false
 # PROD | DEV
 environment: PROD
-bpfmap-default-dir: /sys/fs/bpf
-tcmaps-relative-dir: /tc/globals
+BpfMapDefaultPath: /sys/fs/bpf
+#BpfMapDefaultPath is base path for storing maps
+TcMapsRelativePath: tc/globals
+# TcMapsRelativePath is relative path of tc maps 
 
 [kf-repo]
 url:
