fixed cfg file and bpf_test.go
Signed-off-by: a0p0ie5 <atul.prajapati@walmart.com>

--- a/config/l3afd.cfg
+++ b/config/l3afd.cfg
@@ -44,8 +44,8 @@ is-user-program: false
 [tc-root-program]
 name: tc_root
 artifact: l3af_tc_root.tar.gz
-ingress-map-name: tc_ingress_root_array
-egress-map-name: tc_egress_root_array
+ingress-map-name: tc/globals/tc_ingress_root_array
+egress-map-name: tc/globals/tc_egress_root_array
 command: tc_root
 version: 1.0
 is-user-program: false
