Validating Client Certificate SANs  (#96)
Add mTLS SANs support

Signed-off-by: Santhosh Fernandes <santhosh.fernandes@gmail.com>
Co-authored-by: Jason Niesz <Jason.Niesz@walmart.com>

--- a/config/l3afd.cfg
+++ b/config/l3afd.cfg
@@ -64,10 +64,13 @@ filename: "/etc/l3afd/l3af-config.json"
 [mtls]
 enabled: true
 # TLS_1_2 or TLS_1_3
-min-tls-version:
+min-tls-version: TLS_1_2
 cert-dir: /etc/l3af/certs
 cacert-filename: ca.pem
 server-crt-filename: server.crt
 server-key-filename: server.key
-cert-expiry-warning-days: 30
 # how many days before expiry you want warning
+cert-expiry-warning-days: 30
+# multiple domains seperated by comma
+# literal and regex are validated in lowercase
+# san-match-rules: .+l3afd.l3af.io,.*l3af.l3af.io,^l3afd.l3af.io$
