Update config parameters (#120)
* Update config parameters

Signed-off-by: Santhosh Fernandes <santhosh.fernandes@gmail.com>
Co-authored-by: Jason Niesz <Jason.Niesz@walmart.com>

--- a/config/l3afd.cfg
+++ b/config/l3afd.cfg
@@ -2,7 +2,7 @@
 
 [l3afd]
 pid-file: ./l3afd.pid
-datacenter: dummy
+datacenter: dc
 bpf-dir: /dev/shm
 bpf-log-dir:
 kernel-major-version: 4
@@ -14,57 +14,47 @@ bpf-chaining-enabled: true
 swagger-api-enabled: false
 # PROD | DEV
 environment: PROD
-#BpfMapDefaultPath is base path for storing maps 
+# BpfMapDefaultPath is base path for storing maps
 BpfMapDefaultPath: /sys/fs/bpf
 
 
 [kf-repo]
-url:
+url: http://localhost:8000/
 
 [web]
 metrics-addr: 0.0.0.0:8898
 kf-poll-interval: 30s
 n-metric-samples: 20
 
-[admind]
-host: 
-username: 
-api-key: 
-group-id: 0
-api-enabled: true
-
-
 [xdp-root-program]
 name: xdp-root
 artifact: xdp-root.tar.gz
-ingress-map-name: root_array
+ingress-map-name: xdp_root_array
 command: xdp_root
-version: 1.01
-is-user-program: false
+version: latest
 
 [tc-root-program]
-name: tc_root
+name: tc-root
 artifact: l3af_tc_root.tar.gz
 ingress-map-name: tc/globals/tc_ingress_root_array
 egress-map-name: tc/globals/tc_egress_root_array
 command: tc_root
-version: 1.0
-is-user-program: false
+version: latest
 
 [ebpf-chain-debug]
-addr: 0.0.0.0:8899
+addr: localhost:8899
 enabled: true
 
 [l3af-configs]
 restapi-addr: localhost:53000
 
 [l3af-config-store]
-filename: "/etc/l3afd/l3af-config.json"
+filename: /var/l3afd/l3af-config.json
 
 [mtls]
 enabled: true
 # TLS_1_2 or TLS_1_3
-min-tls-version: TLS_1_2
+min-tls-version: TLS_1_3
 cert-dir: /etc/l3af/certs
 cacert-filename: ca.pem
 server-crt-filename: server.crt
