update kf references to ebpf (#135)
Signed-off-by: sanfern <santhosh.fernandes@gmail.com>

--- a/config/l3afd.cfg
+++ b/config/l3afd.cfg
@@ -18,12 +18,12 @@ environment: PROD
 BpfMapDefaultPath: /sys/fs/bpf
 
 
-[kf-repo]
+[ebpf-repo]
 url: http://localhost:8000/
 
 [web]
 metrics-addr: 0.0.0.0:8898
-kf-poll-interval: 30s
+ebpf-poll-interval: 30s
 n-metric-samples: 20
 
 [xdp-root-program]
