update config docs and config file for prod (#137)
* update config docs and config file for  prod

Signed-off-by: sferna1 <santhosh.fernandes@gmail.com>

--- a/config/l3afd.cfg
+++ b/config/l3afd.cfg
@@ -1,15 +1,13 @@
 [DEFAULT]
 
 [l3afd]
-pid-file: ./l3afd.pid
+pid-file: /var/l3afd/l3afd.pid
 datacenter: dc
 bpf-dir: /dev/shm
 bpf-log-dir:
-kernel-major-version: 4
-kernel-minor-version: 15
 shutdown-timeout: 1s
 http-client-timeout: 10s
-max-nf-restart-count: 3
+max-ebpf-restart-count: 3
 bpf-chaining-enabled: true
 swagger-api-enabled: false
 # PROD | DEV
@@ -19,7 +17,7 @@ BpfMapDefaultPath: /sys/fs/bpf
 
 
 [ebpf-repo]
-url: http://localhost:8000/
+url: file:///var/l3afd/repo
 
 [web]
 metrics-addr: 0.0.0.0:8898
@@ -28,7 +26,7 @@ n-metric-samples: 20
 
 [xdp-root-program]
 name: xdp-root
-artifact: xdp-root.tar.gz
+artifact: l3af_xdp_root.tar.gz
 ingress-map-name: xdp_root_array
 command: xdp_root
 version: latest
@@ -43,7 +41,7 @@ version: latest
 
 [ebpf-chain-debug]
 addr: localhost:8899
-enabled: true
+enabled: false
 
 [l3af-configs]
 restapi-addr: localhost:53000
@@ -55,7 +53,7 @@ filename: /var/l3afd/l3af-config.json
 enabled: true
 # TLS_1_2 or TLS_1_3
 min-tls-version: TLS_1_3
-cert-dir: /etc/l3af/certs
+cert-dir: /etc/l3afd/certs
 cacert-filename: ca.pem
 server-crt-filename: server.crt
 server-key-filename: server.key
