--- a/.github/workflows/ci-build-windows.yaml
+++ b/.github/workflows/ci-build-windows.yaml
@@ -21,6 +21,11 @@ jobs:
     runs-on: windows-latest
     
     steps:
+      - name: Setup Go 1.18.6
+        uses: actions/setup-go@268d8c0ca0432bb2cf416faae41297df9d262d7f
+        with:
+          go-version: '1.18.6'
+
       - name: Harden Runner
         uses: step-security/harden-runner@2e205a28d0e1da00c5f53b161f4067b052c61f34
         with:
@@ -56,7 +61,7 @@ jobs:
 
       - uses: dominikh/staticcheck-action@4ec9a0dff54be2642bc76581598ba433fd8d4967
         with:
-          version: "2021.1.2"
+          version: "2022.1.1"
           install-go: false
           build-tags: WINDOWS
 
