--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -59,5 +59,5 @@ jobs:
 
       - uses: actions/upload-artifact@83fd05a356d7e2593de66fc9913b3002723633cb
         with:
-          name: artifact
+          name: l3afd-latest-linux-x86_64
           path: l3afd
